--- a/public/view/parent.html
+++ b/public/view/parent.html
@@ -45,7 +45,7 @@
           <td class="waves-effect waves-light btn checkInBtn" ng-click='pc.checkOutStudent(student)'>
             {{student.firstName}} {{student.lastName}}
           </td>
-          <td ng-show="student.initialized" class="waves-effect waves-teal btn-flat">Info</td>
+          <td ng-show="student.initialized" class="waves-effect waves-blue btn-flat">Info</td>
         </tr>
       </tbody>
     </table>
