--- a/public/view/partials/studentDashboard.html
+++ b/public/view/partials/studentDashboard.html
@@ -22,7 +22,7 @@
   <div class="col s12">
     <table>
       <tr>
-        <th>Status<th>
+        <th>Status</th>
         <th>Name</th>
         <th>Grade</th>
         <th>Emergency Contact</th>
@@ -39,14 +39,18 @@
         <td>
           <button ng-click="sc.viewEmergency(x.studentID)" onclick="document.getElementById('showEmergency').style.display = 'block'" class="btn">
             <i class="small material-icons">visibility</i>
-          </button></td>
-
-        <td><button ng-click="sc.setId(x)" class="btn" onclick="document.getElementById('editStudent').style.display = 'block'">
-          <i class="small material-icons">create</i>
-        </button></td>
-        <td><button ng-click="sc.deletStudents(x.studentID)" class="btn">
-          <i class="small material-icons">delete</i>
-        </button></td>
+          </button>
+        </td>
+        <td>
+          <button ng-click="sc.setId(x)" class="btn" onclick="document.getElementById('editStudent').style.display = 'block'">
+            <i class="small material-icons">create</i>
+          </button>
+        </td>
+        <td>
+          <button ng-click="sc.deletStudents(x.studentID)" class="btn">
+            <i class="small material-icons">delete</i>
+          </button>
+        </td>
       </tr>
     </table>
     <!-- addStudent Modal -->
