--- a/public/view/partials/classesDashboard.html
+++ b/public/view/partials/classesDashboard.html
@@ -55,16 +55,15 @@
   </div>
   <!-- The addClass Modal -->
   <div id="addClass" class="modal">
-    <span class="close animate" onclick="document.getElementById('addClass').style.display = 'none'">&times;</span>
     <div class="modal-content animate">
       <form id="addClassForm"class="row">
-        <div class='input-field col l6 s12' input-field>
+        <div class='input-field col l12 s12' input-field>
           <i class="material-icons prefix">grade</i>
           <select class="" ng-model="cc.gradesArray" material-select multiple watch>
             <option ng-repeat='grades in cc.gradesRange'>{{grades}}</option>
           </select>
         </div>
-        <div class="input-field col l6 s12">
+        <div class="input-field col l12 s12">
           <i class="material-icons prefix">subject</i>
           <input ng-model='cc.subject' type="text" id="subject" value="">
           <label for="subject">Subject</label>
@@ -89,21 +88,21 @@
           <label class="placeInLabel" for="endTime">End Time</label>
           <input id="endTime" class="timepicker placeInput" ng-model="cc.endTime" input-clock data-twelvehour="true" type="text" />
         </div>
-        <div class="input-field col l8 offset-l2 s12">
+        <div class="input-field col l12 s12">
           <i class="material-icons prefix">location_on</i>
           <input ng-model='cc.location' type="text" id="location" value="">
           <label for="location">Location</label>
         </div>
-        <div class="input-field col l8 offset-l2 s12" ng-repeat="number in cc.inputNumber">
+        <div class="input-field col l10 s12" ng-repeat="number in cc.inputNumber">
           <i class="material-icons prefix">person</i>
           <input ng-model='cc.instructor[number]' type="text" id="instructor{{$index}}" value="">
           <label for="instructor{{$index}}">instructors</label>
         </div>
-        <div class="col l2 s12">
+        <div class="col l2 s12 center-align">
           <button tooltipped class="btn btn-floating" name="button" ng-click="cc.addInput()" data-position="left" data-delay="50" data-tooltip="Add instructor box">
             <i class="material-icons prefix">add</i>
           </button>
-          <button tooltipped class="btn btn-floating" name="button" ng-click="cc.subInput()" data-position="right" data-delay="50" data-tooltip="Remove instructor box">
+          <button tooltipped class="btn cancel btn-floating" name="button" ng-click="cc.subInput()" data-position="right" data-delay="50" data-tooltip="Remove instructor box">
             <i class="material-icons prefix">cancel</i>
           </button>
         </div>
@@ -112,24 +111,24 @@
         <!-- <div class="col s12 center-align">
           <button class='btn' ng-click='cc.addClass()' type="button" name="button">Save Class</button>
         </div> -->
-        <div class="input-field col s4">
+        <div class="col s12">
           <a class="waves-effect waves-light btn" ng-click='cc.addClass()' message="Class Saved" duration="1500" toast='click'>Save Class</a>
+          <button class="btn cancel" onclick="document.getElementById('addClass').style.display = 'none'">cancel</button>
         </div>
       </div>
     </div>
   </div>
   <!-- The editClass Modal -->
   <div id="editClass" class="modal">
-    <span class="close animate" onclick="document.getElementById('editClass').style.display = 'none'">&times;</span>
     <div class="modal-content animate">
       <form class="row">
-        <div class='input-field col l6 s12' input-field>
+        <div class='input-field col l12 s12' input-field>
           <i class="material-icons prefix">grade</i>
           <select class="" ng-model="cc.gradesUP" material-select multiple watch>
             <option ng-repeat='grades in cc.gradesRange'>{{grades}}</option>
           </select>
         </div>
-        <div class="input-field col l6 s12">
+        <div class="input-field col l12 s12">
           <i class="material-icons prefix">subject</i>
           <input ng-model='cc.subjectUP' type="text" id="subjectUP" value="">
           <label for="subjectUP">Subject</label>
@@ -154,12 +153,12 @@
           <label class="placeInLabel" for="endTimeUP">End Time</label>
           <input id="endTimeUP" class="timepicker placeInput" ng-model="cc.endTimeUP" input-clock data-twelvehour="true" type="text" />
         </div>
-        <div class="input-field col l8 offset-l2 s12">
+        <div class="input-field col l12 s12">
           <i class="material-icons prefix">location_on</i>
           <input ng-model='cc.locationUP' type="text" id="locationUP" value="">
           <label for="locationUP">Location</label>
         </div>
-        <div class="input-field col l8 offset-l2 s12" ng-repeat="obj in cc.instructorsUP">
+        <div class="input-field col l10 s12" ng-repeat="obj in cc.instructorsUP">
           <i class="material-icons prefix">person</i>
           <input ng-model='obj.instructor' type="text" id="{{$index}}UP" value="">
           <label for="{{$index}}UP">instructors</label>
@@ -177,8 +176,9 @@
         <!-- <div class="col s12 center-align">
           <button class='btn' ng-click='cc.saveEdit()' type="button" name="button">Save Class</button>
         </div> -->
-        <div class="input-field col s4">
+        <div class="col s12">
           <a class="waves-effect waves-light btn" ng-click='cc.saveEdit()' message="Edit Saved" duration="1500" toast='click'>Save Changes</a>
+          <button class="btn cancel" onclick="document.getElementById('editClass').style.display = 'none'">cancel</button>
         </div>
       </div>
     </div>
