--- a/public/styles/main.scss
+++ b/public/styles/main.scss
@@ -1,13 +1,15 @@
 /*Variable styles*/
+$htmlBackground: #f2f2f2;
 $navColor: #4fc3f7;
-$sideNavColor: #4fc3f7;
-$navCollapse: #2196f3;
-$inputColor:  #2196f3;
-$buttonColor: #2196f3;
+$sideNavColor: #f7834f;
+$navCollapse: #4fc3f7;
+$inputColor:  #4fc3f7;
+$buttonColor: #4fc3f7;
 $cancelButtonColor: #f44336;
 $monthPickerTop: #2196f3;
 $pickerBody: #03A9F4;
 $pickerText: #B3E5FC;
+$complimentaryColor: #f7834f;
 
 /*Import styles*/
 @import 'navigation';
