--- a/public/view/index.html
+++ b/public/view/index.html
@@ -94,7 +94,13 @@
           </ul>
         </li>
         <li class="bold"><a href="#!" ng-click="ic.logout()" class="waves-effect waves-grey"><span class="menuItem">Logout</span></a></li>
-        <li><img class="sideNav-logo" src="/public/assets/images/abamath.png" alt=""></li>
+        <li>
+          <div class="row">
+            <div class="col s6 offset-s3">
+              <img class="sideNav-logo" src="/public/assets/images/abamath.png" alt="">
+            </div>
+          </div>
+        </li>
       </ul>
 
     <!-- end sideNav -->
