--- a/public/view/parentQuestions/4-pinSystem.html
+++ b/public/view/parentQuestions/4-pinSystem.html
@@ -14,7 +14,6 @@
 
 <div id="keypad" class="modal">
   <div class="modal-container">
-    <button class='btn-floating btn left cancel close' ng-click='pc.keypadClose()' type="button" name="button"><i class="material-icons large">cancel</i></button>
     <div id="phoneNumberModal" class="modal-content animate">
       <span>PIN is: <input type="password" data-ng-model="pc.pinEntry"></span>
       <bc-keypad
@@ -24,6 +23,11 @@
       bc-right-button="submit"
       bc-right-button-method="pc.enterPin($event, numbers)"
       ></bc-keypad>
+      <div class="row">
+        <div class="col s12 center-align">
+          <button class='btn cancel marginTop' ng-click='pc.keypadClose()' type="button" name="button"><i class="material-icons large">cancel</i></button>
+        </div>
+      </div>
     </div>
   </div>
 </div>
