--- a/public/view/partials/studentDashboard.html
+++ b/public/view/partials/studentDashboard.html
@@ -1,33 +1,37 @@
-<div class="container">
-  <div class="row">
-    <div class="col s12">
-      <h4 class="center-align">Class Subject: {{sc.currentClass.subject}}</h4>
-      <h5 class='center-align'>Location: {{ sc.currentClass.location }}</h5>
-      <h5 class='center-align'>Date: {{sc.currentClass.startDate | date}} - {{sc.currentClass.endDate | date}}</h5>
-      <!-- <button class="btn" onclick="document.getElementById('addStudent').style.display = 'block'">Add Student</button> -->
-
-    </div>
+<div class="row">
+  <div class="col s12">
+    <h4 class="center-align">Class Subject: {{sc.currentClass.subject}}</h4>
+    <h5 class='center-align'>Location: {{ sc.currentClass.location }}</h5>
+    <h5 class='center-align'>Date: {{sc.currentClass.startDate | date}} - {{sc.currentClass.endDate | date}}</h5>
+    <!-- <button class="btn" onclick="document.getElementById('addStudent').style.display = 'block'">Add Student</button> -->
   </div>
-  <div class="row">
-    <div class="col s12 center-align">
-      <button class="btn"ng-click="sc.goToParent()">Check-in View</button>
-      <button tooltipped class="btn" onclick="document.getElementById('addStudent').style.display = 'block'"
-      data-position="top" data-delay="50" data-tooltip="Add Student to this Class">
-      <i class="small material-icons">person_add</i>
-      </button>
-      <button class='btn' ng-click='sc.checkInAll(sc.studentsArray)' type="button" name="button">Check-in all Students</button>
-      <button class='btn' ng-click='sc.checkoutAllStudents(sc.studentsArray)' type="button" name="button">Check-out no PIN</button>
-      <button class='btn' ng-click='sc.forceCheckout(sc.studentsArray)' type="button" name="button">Check-out All Students</button>
-    </div>
+</div>
+<div class="row">
+  <div class="col s3 offset-s1">
+    <button tooltipped class="btn marginAuto"ng-click="sc.goToParent()"
+    data-position="top" data-delay="50" data-tooltip="Check-in View">
+    <i class="small material-icons">visibility</i></button>
+    <button tooltipped class="btn marginAuto" onclick="document.getElementById('addStudent').style.display = 'block'"
+            data-position="top" data-delay="50" data-tooltip="Add Student to this Class">
+            <i class="small material-icons">person_add</i>
+    </button>
+  </div>
+  <div class="col s7">
+    <button class='btn right' ng-click='sc.checkInAll(sc.studentsArray)' type="button" name="button">Check-in all Students</button>
+    <button class='btn right' ng-click='sc.checkoutAllStudents(sc.studentsArray)' type="button" name="button">Check-out no PIN</button>
+    <button class='btn right' ng-click='sc.forceCheckout(sc.studentsArray)' type="button" name="button">Check-out All Students</button>
+  </div>
+  </div>
+</div>
   <div class="col s12">
     <table>
       <tr>
-        <th>Status</th>
-        <th>Name</th>
-        <th>Grade</th>
-        <th>Emergency Contact</th>
-        <th>Edit</th>
-        <th>Delete</th>
+        <th class="tb">Status</th>
+        <th class="tb">Name</th>
+        <th class="tb">Grade</th>
+        <th class="tb">Emergency Contact</th>
+        <th class="tb">Edit</th>
+        <th class="tb">Delete</th>
       </tr>
       <tr ng-repeat='x in sc.studentsArray'>
         <td>
@@ -53,6 +57,7 @@
         </td>
       </tr>
     </table>
+  </div>
     <!-- addStudent Modal -->
     <div id="addStudent" class="modal">
       <span class="close animate" onclick="document.getElementById('addStudent').style.display = 'none'">&times;</span>
@@ -154,6 +159,3 @@
       </div>
     </div>
     <!--end emergency modal  -->
-  </div>
-</div>
-</div>
