styling tweaks, standarized modal and button changes

--- a/public/styles/main.scss
+++ b/public/styles/main.scss
@@ -15,5 +15,6 @@ $complimentaryColor: #f7834f;
 @import 'navigation';
 @import 'login';
 @import 'generalStyles';
+@import 'buttonStyles';
 @import 'inputs';
 @import 'studentsDash';
