--- a/public/styles/_generalStyles.scss
+++ b/public/styles/_generalStyles.scss
@@ -1,3 +1,38 @@
+html {
+  background-color: $htmlBackground;
+}
+
+.login {
+  background-color: $complimentaryColor;
+  margin: 0px;
+}
+
+.margin {
+  margin-bottom: 40px;
+}
+
+.marginTop {
+  margin-top: 40px;
+}
+
+.marginAuto {
+  margin: auto;
+}
+
+.card {
+  padding: 20px !important;
+}
+
+.verticalDivider {
+     border-right:1px solid $complimentaryColor;
+     border-left:1px solid $complimentaryColor;
+     background-color: $complimentaryColor;
+     height: 100%;
+     position: absolute;
+     top: 14vh;
+     right: 50vw;
+}
+
 /*table styles*/
 
 .tb {
@@ -31,8 +66,14 @@ td {
   text-align: center;
 }
 
-html {
-  background-color: $htmlBackground;
+.parentTR {
+  min-width: 30vw;
+  white-space: nowrap;
+}
+
+.parentTD {
+  padding: 2px !important;
+  vertical-align: bottom;
 }
 
 /* modal styles */
@@ -81,118 +122,4 @@ html {
 #phoneNumberModal{
   width: 40vw;
   height: auto;
-}
-
-/* button styling */
-
-.btn {
-  background-color: $buttonColor !important;
-}
-
-.cancel {
-  background-color: $cancelButtonColor !important;
-}
-
-.checkInBtn {
-  min-width: 20vw;
-}
-
-.parentTR {
-  min-width: 30vw;
-  white-space: nowrap;
-}
-
-.parentTD {
-  padding: 2px !important;
-  vertical-align: bottom;
-}
-
-.verticalDivider {
-     border-right:1px solid $complimentaryColor;
-     border-left:1px solid $complimentaryColor;
-     background-color: $complimentaryColor;
-     height: 100vh;
-}
-
-.parentBtn {
-    display: inline-block;
-    margin: 10px;
-    -webkit-border-radius: 8px;
-    -moz-border-radius: 8px;
-    border-radius: 8px;
-    -webkit-box-shadow:    0 8px 0 $buttonColor, 0 15px 20px rgba(0, 0, 0, .35);
-    -moz-box-shadow: 0 8px 0 $buttonColor, 0 15px 20px rgba(0, 0, 0, .35);
-    box-shadow: 0 8px 0 $buttonColor, 0 15px 20px rgba(0, 0, 0, .35);
-    -webkit-transition: -webkit-box-shadow .1s ease-in-out;
-    -moz-transition: -moz-box-shadow .1s ease-in-out;
-    -o-transition: -o-box-shadow .1s ease-in-out;
-    transition: box-shadow .1s ease-in-out;
-    font-size: 50px;
-    color: #fff;
-}
-
-.parentBtn span {
-    display: inline-block;
-    padding: 20px 30px;
-    background-color: #90caf9;
-    background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(hsla(338, 90%, 80%, .8)), to(hsla(338, 90%, 70%, .2)));
-    background-image: -webkit-linear-gradient(hsla(338, 90%, 80%, .8), hsla(338, 90%, 70%, .2));
-    background-image: -moz-linear-gradient(hsla(338, 90%, 80%, .8), hsla(338, 90%, 70%, .2));
-    background-image: -o-linear-gradient(hsla(338, 90%, 80%, .8), hsla(338, 90%, 70%, .2));
-    -webkit-border-radius: 8px;
-    -moz-border-radius: 8px;
-    border-radius: 8px;
-    -webkit-box-shadow: inset 0 -1px 1px rgba(255, 255, 255, .15);
-    -moz-box-shadow: inset 0 -1px 1px rgba(255, 255, 255, .15);
-    box-shadow: inset 0 -1px 1px rgba(255, 255, 255, .15);
-    font-family: 'Pacifico', Arial, sans-serif;
-    line-height: 1;
-    text-shadow: 0 -1px 1px rgba(175, 49, 95, .7);
-    -webkit-transition: background-color .2s ease-in-out, -webkit-transform .1s ease-in-out;
-    -moz-transition: background-color .2s ease-in-out, -moz-transform .1s ease-in-out;
-    -o-transition: background-color .2s ease-in-out, -o-transform .1s ease-in-out;
-    transition: background-color .2s ease-in-out, transform .1s ease-in-out;
-}
-
-.parentBtn:hover span {
-    background-color: #90caf9;
-    text-shadow: 0 -1px 1px rgba(175, 49, 95, .9), 0 0 5px rgba(255, 255, 255, .8);
-}
-
-.parentBtn:active, .parentBtn:focus {
-    -webkit-box-shadow:    0 8px 0 $buttonColor, 0 12px 10px rgba(0, 0, 0, .3);
-    -moz-box-shadow: 0 8px 0 $buttonColor, 0 12px 10px rgba(0, 0, 0, .3);
-    box-shadow:    0 8px 0 $buttonColor, 0 12px 10px rgba(0, 0, 0, .3);
-}
-
-.parentBtn:active span {
-    -webkit-transform: translate(0, 4px);
-    -moz-transform: translate(0, 4px);
-    -o-transform: translate(0, 4px);
-    transform: translate(0, 4px);
-}
-
-.editable-input.editable-has-buttons {
-  width: none;
-  font-size: 2.28rem;
-}
-
-.margin {
-  margin-bottom: 40px;
-}
-
-.marginTop {
-  margin-top: 40px;
-}
-
-.marginAuto {
-  margin: auto;
-}
-
-.card {
-  padding: 20px !important;
-}
-
-button:focus {
-  background-color: #90caf9 !important;
 }
