--- a/public/view/partials/login.html
+++ b/public/view/partials/login.html
@@ -1,14 +1,10 @@
 <!-- Consider this the main view -->
-<div class="row">
-  <div class="col s4 offset-s4">
-    <h2 class="center-align">Login Page</h2>
+<div class="row login" ng-hide="auth.loggedIn">
+  <div class="col s12 valign-wrapper"   style="height: 86vh">
+    <a href= "/auth/google" class="btn loginBtn col s4 offset-s4 container" type="button" name="button">
+      <img class="loginImg" src="public/assets/images/google_logo1600 (1).png" />
+      <span class="loginDivider">|</span>
+      <span>Sign in with Google</span>
+    </a>
   </div>
-</div>
-<div class="row" ng-hide="auth.loggedIn">
-  <a href= "/auth/google" class="btn loginBtn col s4 offset-s4 container" type="button" name="button">
-    <img class="loginImg" src="public/assets/images/google_logo1600 (1).png" />
-    <span class="loginDivider">|</span>
-    <span>Sign in with Google</span>
-  </a>
-
 </div>
