--- a/public/view/partials/failure.html
+++ b/public/view/partials/failure.html
@@ -1,4 +1,4 @@
-<div class="red" style="height: 90vh">
+<div class="red fullheight">
   <div class="row">
     <div class="col s12">
       <h4 class="center-align">That is not an authenticated email! please try a different email or speak with an instructor</h4>
