--- a/public/view/parentQuestions/1-emergencyContact.html
+++ b/public/view/parentQuestions/1-emergencyContact.html
@@ -1,32 +1,28 @@
-<div class="container">
-  <div class="row">
+<div class="compliment">
+  <div class="row fullheight container">
     <div class="col s12 center-align" ng-init="pc.loadEmergencyInfo()">
-      <h2>Emergency Contact Info</h2>
-      <h5>Please review this information and make any changes.</h5>
+      <h3 class="whiteText">Emergency Contact Info</h3>
+      <h5 class="whiteText">Please review this information and make any changes.</h5>
     </div>
     <div class="col s12">
-      <div class="card">
-        <h4 class="margin" editable-text="pc.currentStudent.emergencyName">
+      <div class="card background">
+        <h4 class="marginBottom" editable-text="pc.currentStudent.emergencyName">
           Name: {{pc.currentStudent.emergencyName || 'empty' }}
         </h4>
-        <h4 class="margin" editable-text="pc.currentStudent.emergencyPhone">
+        <h4 class="marginBottom" editable-text="pc.currentStudent.emergencyPhone">
           Phone: {{pc.currentStudent.emergencyPhone || 'empty' }}
         </h4>
-        <h4 class="margin" editable-text="pc.currentStudent.emergencyRelation">
+        <h4 class="marginBottom" editable-text="pc.currentStudent.emergencyRelation">
           Relation: {{pc.currentStudent.emergencyRelation || 'empty' }}
         </h4>
       </div>
     </div>
-      <h5 class="center-align">Is this information correct?</h5>
-      <div class="row">
-        <div class="col s12 center-align">
-          <a class="parentBtn" href ng-click='pc.emergencySubmit()' type="button" name="button"><span>Yes</span></a>
-          <a class="parentBtn" href ng-click='pc.emergencyAlert()' type="button" name="button"><span>No</span></a>
-        </div>
-      </div>
+    <div class="col s12">
+      <h5 class="center-align whiteText">Is this information correct?</h5>
+    </div>
+    <div class="col s12 center-align">
+      <a class="parentBtn" href ng-click='pc.emergencySubmit()' type="button" name="button"><span>Yes</span></a>
+      <a class="parentBtn" href ng-click='pc.emergencyAlert()' type="button" name="button"><span>No</span></a>
+    </div>
   </div>
 </div>
-<!-- emergencyContact page will use x-editable,
- doesn't need a function as I currently understand it.
-Use a sweetAlert to stop people from moving on if they hit No,
- and instead prompt them to correct the info directly. -->
