--- a/public/view/parentQuestions/2-selfCheckout.html
+++ b/public/view/parentQuestions/2-selfCheckout.html
@@ -1,9 +1,15 @@
-<div class="container">
-  <div class="row">
-    <div class="col s12 center-align">
-      <h3>Will your child be checking themselves out?</h3>
-      <a class="parentBtn" href ng-click='pc.selfCheckout(true)' type="button" name="button"><span>yes</span></a>
-      <a class="parentBtn" href ng-click='pc.selfCheckout(false)' type="button" name="button"><span>no</span></a>
+<div class="compliment">
+  <div class="row fullheight valign-wrapper" style="width: 100vw">
+    <div class="card col s10 offset-s1 background">
+      <div class="row">
+        <div class="col s12 center-align">
+          <h3>Will your child be checking themselves out?</h3>
+        </div>
+        <div class="col s12 center-align">
+          <a class="parentBtn" href ng-click='pc.selfCheckout(true)' type="button" name="button"><span>yes</span></a>
+          <a class="parentBtn" href ng-click='pc.selfCheckout(false)' type="button" name="button"><span>no</span></a>
+        </div>
+      </div>
     </div>
   </div>
 </div>
