--- a/public/view/parentQuestions/4-pinSystem.html
+++ b/public/view/parentQuestions/4-pinSystem.html
@@ -1,12 +1,17 @@
-<div class="container" ng-init="pc.loadPinInfo">
-  <div class="row">
-    <div class="col s12 center-align">
-      <div ng-if="pc.currentStudent.usePin">
-        WE GOT A PIN ALREADY
+<div class="compliment" ng-init="pc.loadPinInfo">
+  <div class="row fullheight valign-wrapper" style="width: 100vw">
+    <div class="card col s10 offset-s1 background">
+      <div class="row">
+        <div ng-if="pc.currentStudent.usePin">
+          You have a registered pin
+        </div>
+        <div class="col s12 center-align">
+          <h3>Would you like to use a PIN to check out the student?</h3>
+        </div>
+        <div class="col s12 center-align">
+          <a class="parentBtn" href ng-click='pc.usePin(true)' type="button" name="button"><span>Yes</span></a>
+          <a class="parentBtn" href ng-click='pc.usePin(false)' type="button" name="button"><span>No</span></a></div>
       </div>
-      <h3>Would you like to use a PIN to check out the student?</h3>
-      <a class="parentBtn" href ng-click='pc.usePin(true)' type="button" name="button"><span>Yes</span></a>
-      <a class="parentBtn" href ng-click='pc.usePin(false)' type="button" name="button"><span>No</span></a>
     </div>
   </div>
 </div>
