--- a/public/view/parentQuestions/5-complete.html
+++ b/public/view/parentQuestions/5-complete.html
@@ -1,8 +1,13 @@
-<div class="container">
-  <div class="row">
-    <div class="col s12 center-align" ng-init="pc.completeParentReview()">
-      <h3 class="">Great!  {{pc.currentStudent.firstName}} has been checked in!</h3>
-      <a class="parentBtn" href ng-click='pc.go("/parent")' type="button" name="button"><span>Complete</span></a>
+<div class="compliment" ng-init="pc.completeParentReview()">
+  <div class="row fullheight valign-wrapper" style="width: 100vw">
+    <div class="card col s10 offset-s1 background">
+      <div class="row">
+        <div class="col s12 center-align">
+          <h3 class="">Great!  {{pc.currentStudent.firstName}} has been checked in!</h3>
+        </div>
+        <div class="col s12 center-align">
+          <a class="parentBtn" href ng-click='pc.go("/parent")' type="button" name="button"><span>Complete</span></a></div>
+      </div>
     </div>
   </div>
 </div>
