--- a/public/view/partials/login.html
+++ b/public/view/partials/login.html
@@ -1,5 +1,5 @@
 <!-- Consider this the main view -->
-<div class="row login" ng-hide="auth.loggedIn">
+<div class="row compliment" ng-hide="auth.loggedIn">
   <div class="col s12 valign-wrapper"   style="height: 86vh">
     <a href= "/auth/google" class="btn loginBtn col s4 offset-s4 container" type="button" name="button">
       <img class="loginImg" src="public/assets/images/google_logo1600 (1).png" />
