--- a/public/view/parentQuestions/4-pinSystem.html
+++ b/public/view/parentQuestions/4-pinSystem.html
@@ -10,7 +10,16 @@
         </div>
         <div class="col s12 center-align">
           <a class="parentBtn" href ng-click='pc.usePin(true)' type="button" name="button"><span>Yes</span></a>
-          <a class="parentBtn" href ng-click='pc.usePin(false)' type="button" name="button"><span>No</span></a></div>
+          <a class="parentBtn" href ng-click='pc.usePin(false)' type="button" name="button"><span>No</span></a>
+        </div>
+        <div class="col s6 offset-s3">
+          <div class="center-align">
+            <a href="#!selfCheckout"><div class="circle pagin paginFirst paginFill"></div></a>
+            <div href="#!receiveTexts" class="circle pagin paginFill"></div>
+            <div class="circle pagin paginFill"></div>
+            <div class="circle pagin"></div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
