--- a/public/view/parentQuestions/5-complete.html
+++ b/public/view/parentQuestions/5-complete.html
@@ -6,7 +6,16 @@
           <h3 class="">Great!  {{pc.currentStudent.firstName}} has been checked in!</h3>
         </div>
         <div class="col s12 center-align">
-          <a class="parentBtn" href ng-click='pc.go("/parent")' type="button" name="button"><span>Complete</span></a></div>
+          <a class="parentBtn" href ng-click='pc.go("/parent")' type="button" name="button"><span>Complete</span></a>
+        </div>
+        <div class="col s6 offset-s3">
+          <div class="center-align">
+            <a href="#!selfCheckout"><div class="circle pagin paginFirst paginFill"></div></a>
+            <a href="#!receiveTexts"><div class="circle pagin paginFill"></div></a>
+            <a href="#!pinSystem"><div class="circle pagin paginFill"></div></a>
+            <div class="circle pagin paginFill"></div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
