--- a/public/view/parentQuestions/3-receiveTexts.html
+++ b/public/view/parentQuestions/3-receiveTexts.html
@@ -10,6 +10,14 @@
           <a class="parentBtn" href ng-click='pc.receiveTexts(true)' type="button" name="button"><span>Yes, emails</span></a>
           <a class="parentBtn" href ng-click='pc.receiveTexts(false)' type="button" name="button"><span>No</span></a>
         </div>
+        <div class="col s6 offset-s3">
+          <div class="center-align">
+            <a href="#!selfCheckout"><div class="circle pagin paginFirst paginFill"></div></a>
+            <div class="circle pagin paginFill"></div>
+            <div class="circle pagin"></div>
+            <div class="circle pagin"></div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
