--- a/public/view/index.html
+++ b/public/view/index.html
@@ -49,7 +49,7 @@
   <main ng-controller="IndexController as ic">
 
     <!-- start topNav -->
-    <nav ng-if="ic.notParentView">
+    <nav class="z-depth-2" ng-if="ic.notParentView">
       <div class="nav-wrapper row">
         <div class=" col s4">
           <a ng-if="ic.displayLogout" href="#" class="navButton button-collapse left" data-activates="nav" data-sidenav="left" data-closeonclick="true">
@@ -106,7 +106,7 @@
     <!-- end sideNav -->
 
 
-    <nav id="parentNav" ng-hide="ic.notParentView">
+    <nav class="z-depth-2" id="parentNav" ng-hide="ic.notParentView">
       <div class="row">
         <div class="col s4 offset-s4">
           <h1 class="center-align">Abamath</h1>
