--- a/public/view/parentQuestions/4-pinSystem.html
+++ b/public/view/parentQuestions/4-pinSystem.html
@@ -15,7 +15,7 @@
         <div class="col s6 offset-s3">
           <div class="center-align">
             <a href="#!selfCheckout"><div class="circle pagin paginFirst paginFill"></div></a>
-            <div href="#!receiveTexts" class="circle pagin paginFill"></div>
+            <a href="#!recieveTexts" ><div class="circle pagin paginFill"></div></a>
             <div class="circle pagin paginFill"></div>
             <div class="circle pagin"></div>
           </div>
