--- a/public/view/parentQuestions/3-receiveTexts.html
+++ b/public/view/parentQuestions/3-receiveTexts.html
@@ -13,7 +13,7 @@
         <div class="col s6 offset-s3">
           <div class="center-align">
             <a href="#!selfCheckout"><div class="circle pagin paginFirst paginFill"></div></a>
-            <a href="#!recieveTexts" ><div class="circle pagin paginFill"></div></a>
+            <div class="circle pagin paginFill"></div>
             <div class="circle pagin"></div>
             <div class="circle pagin"></div>
           </div>
