--- a/public/styles/main.scss
+++ b/public/styles/main.scss
@@ -9,7 +9,7 @@ $cancelButtonColor: #f44336;
 $monthPickerTop: #2196f3;
 $pickerBody: #03A9F4;
 $pickerText: #B3E5FC;
-$complimentaryColor: #f7834f;
+$complimentaryColor: #ffbf69;
 
 /*Import styles*/
 @import 'navigation';
