fixed parent view

--- a/public/styles/_generalStyles.scss
+++ b/public/styles/_generalStyles.scss
@@ -7,7 +7,7 @@ html {
   margin: 0px;
 }
 
-.margin {
+.marginBottom {
   margin-bottom: 40px;
 }
 
@@ -31,6 +31,10 @@ html {
      position: absolute;
      top: 14vh;
      right: 50vw;
+}
+
+.fullheight {
+  height: 86vh;
 }
 
 /*table styles*/
