--- a/public/styles/main.scss
+++ b/public/styles/main.scss
@@ -19,7 +19,7 @@ $complimentaryColor: #f7834f;
 @import 'inputs';
 @import 'studentsDash';
 
-#myChart {
-height: 10vh !important;
-width: 10vh !important;
+#attend{
+  height: 30vh !important;
+  width: 30vh !important;
 }
