--- a/public/view/partials/stats.html
+++ b/public/view/partials/stats.html
@@ -1,9 +1,22 @@
 <div class="container">
   <div class="row">
-    <div class="col s12">
+    <div class="col s4">
+      <h4>Number of Students in each class</h4>
+  <canvas id="attend"></canvas>
 
 
-      
+    </div>
+    <div class="col s4">
+      <h4>Today's attendance</h4>
+<canvas id="today" width="300" height="300"></canvas>
+
+
+    </div>
+    <div class="col s4">
+      <h4>number of people using pin</h4>
+<canvas id="pin" width="300" height="300"></canvas>
+
+
     </div>
   </div>
 </div>
