--- a/public/view/parentQuestions/1-emergencyContact.html
+++ b/public/view/parentQuestions/1-emergencyContact.html
@@ -1,4 +1,4 @@
-<div class="compliment">
+<div class="">
   <div class="row fullheight container">
     <div class="col s12 center-align" ng-init="pc.loadEmergencyInfo()">
       <h3 class="whiteText">Emergency Contact Info</h3>
