--- a/public/view/parentQuestions/4-pinSystem.html
+++ b/public/view/parentQuestions/4-pinSystem.html
@@ -1,4 +1,4 @@
-<div class="compliment" ng-init="pc.loadPinInfo">
+<div class="" ng-init="pc.loadPinInfo">
   <div class="row fullheight valign-wrapper" style="width: 100vw">
     <div class="card col s10 offset-s1 background">
       <div class="row">
