--- a/public/view/parentQuestions/5-complete.html
+++ b/public/view/parentQuestions/5-complete.html
@@ -1,4 +1,4 @@
-<div class="compliment" ng-init="pc.completeParentReview()">
+<div class="" ng-init="pc.completeParentReview()">
   <div class="row fullheight valign-wrapper" style="width: 100vw">
     <div class="card col s10 offset-s1 background">
       <div class="row">
