--- a/public/view/partials/stats.html
+++ b/public/view/partials/stats.html
@@ -2,7 +2,8 @@
   <div class="row">
     <div class="col s4">
       <h4>Number of Students in each class</h4>
-  <canvas id="attend"></canvas>
+      <canvas id="attend" class="chart chart-doughnut"
+      chart-data="sc.attendDataArr" chart-labels="sc.attendLabelArrabels"></canvas>
 
 
     </div>
