--- a/public/view/parent.html
+++ b/public/view/parent.html
@@ -1,7 +1,7 @@
 <div class="row fullheight" ng-init="pc.loadClassInfo()">
   <!-- checkedout -->
   <div class="col l6 s6 center-align">
-    <h3>Check In</h3>
+    <h3><u>Check In</u></h3>
     <div class="row">
       <div class="col s6" ng-repeat="student in pc.studentArray | orderBy:'firstName'" ng-if="student.checkedIn == 'false'">
         <button class="waves-effect waves-light btn checkInBtn marginBottom" ng-click='pc.checkInStudent(student)'>
@@ -13,7 +13,7 @@
   </div>
   <!-- checkedin -->
   <div class="col s6 center-align">
-    <h3>Check out</h3>
+    <h3><u>Check out</u></h3>
     <div class="row center-align">
       <div class="col s6" ng-repeat="student in pc.studentArray | orderBy:'firstName'" ng-if="student.checkedIn == 'true'">
         <button class="waves-effect waves-light btn checkInBtn marginBottom" ng-click='pc.checkOutStudent(student)'>
