--- a/public/view/partials/classesDashboard.html
+++ b/public/view/partials/classesDashboard.html
@@ -55,10 +55,11 @@
   <!-- The addClass Modal -->
   <div id="addClass" class="modal">
     <div class="modal-content animate">
-      <form id="addClassForm"class="row">
+      <form id="addClassForm" class="row">
         <div class='input-field col l12 s12' input-field>
           <i class="material-icons prefix">grade</i>
           <select class="" ng-model="cc.gradesArray" material-select multiple watch>
+            <option value="" disabled selected style="display: none;">Grade</option>
             <option ng-repeat='grades in cc.gradesRange'>{{grades}}</option>
           </select>
         </div>
@@ -95,7 +96,7 @@
         <div class="input-field col l10 s12" ng-repeat="number in cc.inputNumber">
           <i class="material-icons prefix">person</i>
           <input ng-model='cc.instructor[number]' type="text" id="instructor{{$index}}" value="">
-          <label for="instructor{{$index}}">instructors</label>
+          <label for="instructor{{$index}}">Instructors</label>
         </div>
         <div class="col l2 s12 center-align">
           <button tooltipped class="btn btn-floating" name="button" ng-click="cc.addInput()" data-position="left" data-delay="50" data-tooltip="Add instructor box">
@@ -112,7 +113,7 @@
         </div> -->
         <div class="col s12">
           <a class="waves-effect waves-light btn" ng-click='cc.addClass()' message="Class Saved" duration="1500" toast='click'>Save Class</a>
-          <button class="btn cancel" onclick="document.getElementById('addClass').style.display = 'none'">cancel</button>
+          <a class="waves-effect cancel waves-light btn" onclick="document.getElementById('addClass').style.display = 'none'" message="Class Canceled" duration="1500" toast='click'>Cancel</a>
         </div>
       </div>
     </div>
@@ -177,7 +178,7 @@
         </div> -->
         <div class="col s12">
           <a class="waves-effect waves-light btn" ng-click='cc.saveEdit()' message="Edit Saved" duration="1500" toast='click'>Save Changes</a>
-          <button class="btn cancel" onclick="document.getElementById('editClass').style.display = 'none'">cancel</button>
+          <a class="waves-effect cancel waves-light btn" onclick="document.getElementById('editClass').style.display = 'none'" message="Edit Canceled" duration="1500" toast='click'>Cancel</a>
         </div>
       </div>
     </div>
