--- a/public/view/parentQuestions/2-selfCheckout.html
+++ b/public/view/parentQuestions/2-selfCheckout.html
@@ -9,7 +9,10 @@
           <a class="parentBtn" href ng-click='pc.selfCheckout(true)' type="button" name="button"><span>yes</span></a>
           <a class="parentBtn" href ng-click='pc.selfCheckout(false)' type="button" name="button"><span>no</span></a>
         </div>
-        <div class="col s6 offset-s3">
+        <div class="col s3">
+          <span class="disabled"><h3>< Prev</h3></span>
+        </div>
+        <div class="col s6">
           <div class="center-align">
             <div class="circle pagin paginFirst paginFill"></div>
             <div class="circle pagin"></div>
