--- a/public/view/parentQuestions/4-pinSystem.html
+++ b/public/view/parentQuestions/4-pinSystem.html
@@ -12,11 +12,14 @@
           <a class="parentBtn" href ng-click='pc.usePin(true)' type="button" name="button"><span>Yes</span></a>
           <a class="parentBtn" href ng-click='pc.usePin(false)' type="button" name="button"><span>No</span></a>
         </div>
-        <div class="col s6 offset-s3">
+        <div class="col s3">
+          <a href="#!selfCheckout"><h3>< Prev</h3></a>
+        </div>
+        <div class="col s6">
           <div class="center-align">
             <a href="#!selfCheckout"><div class="circle pagin paginFirst paginFill"></div></a>
-            <a href="#!receiveTexts" ><div class="circle pagin paginFill"></div></a>
             <div class="circle pagin paginFill"></div>
+            <div class="circle pagin"></div>
             <div class="circle pagin"></div>
           </div>
         </div>
@@ -30,7 +33,10 @@
           <a class="parentBtn" href ng-click='pc.usePin(false)' type="button" name="button"><span>Accept</span></a>
           <a class="parentBtn" href="#!selfCheckout"  type="button" name="button"><span>Cancel</span></a>
         </div>
-        <div class="col s6 offset-s3">
+        <div class="col s3">
+          <a href="#!selfCheckout"><h3>< Prev</h3></a>
+        </div>
+        <div class="col s6">
           <div class="center-align">
             <a href="#!selfCheckout"><div class="circle pagin paginFirst paginFill"></div></a>
             <div class="circle pagin paginFill"></div>
