--- a/public/view/partials/stats.html
+++ b/public/view/partials/stats.html
@@ -2,22 +2,15 @@
   <div class="row">
     <div class="col s4">
       <h4>Number of Students in each class</h4>
-      <canvas id="attend" class="chart chart-doughnut"
-      chart-data="sc.attendDataArr" chart-labels="sc.attendLabelArrabels"></canvas>
-
-
+      <canvas id="attend" class="chart chart-doughnut" chart-data="sc.attendDataArr" chart-labels="sc.attendLabelArr"></canvas>
     </div>
     <div class="col s4">
       <h4>Today's attendance</h4>
-<canvas id="today" width="300" height="300"></canvas>
-
-
+      <canvas id="today" class="chart chart-doughnut" chart-data="sc.attendDataArr" chart-labels="sc.attendLabelArr"></canvas>
     </div>
     <div class="col s4">
       <h4>number of people using pin</h4>
-<canvas id="pin" width="300" height="300"></canvas>
-
-
+      <canvas id="pin" class="chart chart-doughnut" chart-data="sc.pinDataArr" chart-labels="sc.pinLabelArr"></canvas>
     </div>
   </div>
 </div>
