--- a/public/view/index.html
+++ b/public/view/index.html
@@ -76,7 +76,7 @@
 
         <li class="bold"><a href="#!stats" class="waves-effect waves"><span class="menuItem">Statistics</span></a></li>
 
-        <li tooltipped ng-show="ic.classSub" class="disabled" data-position="right" data-delay="100" data-tooltip="Please select class from dashboard to view this dropdown">
+        <!-- <li tooltipped ng-show="ic.classSub" class="disabled" data-position="right" data-delay="100" data-tooltip="Please select class from dashboard to view this dropdown">
           <span>Class options</span>
         </li>
 
@@ -92,7 +92,7 @@
               </div>
             </li>
           </ul>
-        </li>
+        </li> -->
         <li class="bold"><a href="#!" ng-click="ic.logout()" class="waves-effect waves-grey"><span class="menuItem">Logout</span></a></li>
         <li>
           <div class="row">
