--- a/public/view/partials/stats.html
+++ b/public/view/partials/stats.html
@@ -1,15 +1,15 @@
 <div class="container">
   <div class="row">
     <div class="col s4">
-      <h4>Number of Students in each class</h4>
+      <h5>Number of Students in each class</h5>
       <canvas id="attend" class="chart chart-doughnut" chart-data="sc.attendDataArr" chart-labels="sc.attendLabelArr"></canvas>
     </div>
     <div class="col s4">
-      <h4>Today's attendance</h4>
-      <canvas id="today" class="chart chart-doughnut" chart-data="sc.attendDataArr" chart-labels="sc.attendLabelArr"></canvas>
+      <!-- <h4>Today's attendance</h4>
+      <canvas id="today" class="chart chart-doughnut" chart-data="sc.attendDataArr" chart-labels="sc.attendLabelArr"></canvas> -->
     </div>
     <div class="col s4">
-      <h4>number of people using pin</h4>
+      <h5>number of people using pin</h5>
       <canvas id="pin" class="chart chart-doughnut" chart-data="sc.pinDataArr" chart-labels="sc.pinLabelArr"></canvas>
     </div>
   </div>
