revised parent view wording

--- a/public/view/parentQuestions/2-selfCheckout.html
+++ b/public/view/parentQuestions/2-selfCheckout.html
@@ -3,14 +3,14 @@
     <div class="card col s10 offset-s1 background">
       <div class="row">
         <div class="col s12 center-align">
-          <h3>Will your child be checking themselves out?</h3>
+          <h3>Will your child be checking themself out today?</h3>
         </div>
         <div class="col s12 center-align">
-          <a class="parentBtn" href ng-click='pc.selfCheckout(true)' type="button" name="button"><span>yes</span></a>
-          <a class="parentBtn" href ng-click='pc.selfCheckout(false)' type="button" name="button"><span>no</span></a>
+          <a class="parentBtn" href ng-click='pc.selfCheckout(true)' type="button" name="button"><span>Yes</span></a>
+          <a class="parentBtn" href ng-click='pc.selfCheckout(false)' type="button" name="button"><span>No</span></a>
         </div>
         <div class="col s3">
-          <span class="disabled"><h3>< Prev</h3></span>
+          <span class="disabled"><h4>< Prev</h4></span>
         </div>
         <div class="col s6">
           <div class="center-align">
