--- a/public/view/parentQuestions/1-emergencyContact.html
+++ b/public/view/parentQuestions/1-emergencyContact.html
@@ -2,7 +2,7 @@
   <div class="row fullheight container">
     <div class="col s12 center-align" ng-init="pc.loadEmergencyInfo()">
       <h3 class="whiteText">Emergency Contact Info</h3>
-      <h5 class="whiteText">Please review this information and make any changes.</h5>
+      <h5 class="whiteText">Please review this information and click to make any changes.</h5>
     </div>
     <div class="col s12">
       <div class="card background">
@@ -10,7 +10,7 @@
           Name: {{pc.currentStudent.emergencyName || 'empty' }}
         </h4>
         <h4 class="marginBottom" editable-text="pc.currentStudent.emergencyPhone">
-          Phone: {{pc.currentStudent.emergencyPhone || 'empty' }}
+          Phone: {{(pc.currentStudent.emergencyPhone | tel) || 'empty' }}
         </h4>
         <h4 class="marginBottom" editable-text="pc.currentStudent.emergencyRelation">
           Relation: {{pc.currentStudent.emergencyRelation || 'empty' }}
@@ -18,11 +18,11 @@
       </div>
     </div>
     <div class="col s12">
-      <h5 class="center-align whiteText">Is this information correct?</h5>
+      <h5 class="center-align whiteText">When information is correct, press Continue.</h5>
     </div>
     <div class="col s12 center-align">
-      <a class="parentBtn" href ng-click='pc.emergencySubmit()' type="button" name="button"><span>Yes</span></a>
-      <a class="parentBtn" href ng-click='pc.emergencyAlert()' type="button" name="button"><span>No</span></a>
+      <a class="parentBtn" href ng-click='pc.emergencySubmit()' type="button" name="button"><span>Continue</span></a>
+      <!-- <a class="parentBtn" href ng-click='pc.emergencyAlert()' type="button" name="button"><span>No</span></a> -->
     </div>
   </div>
 </div>
