--- a/public/view/parentQuestions/4-pinSystem.html
+++ b/public/view/parentQuestions/4-pinSystem.html
@@ -2,18 +2,16 @@
   <div class="row fullheight valign-wrapper" style="width: 100vw">
     <div class="card col s10 offset-s1 background">
       <div ng-if="pc.currentStudent.selfCheck == false" class="row">
-        <div ng-if="pc.currentStudent.usePin">
-          You have a registered pin
-        </div>
         <div class="col s12 center-align">
           <h3>Would you like to use a PIN to check out the student?</h3>
+          <h5>A PIN is a 4-digit number which is used to check out students for added security.</h5>
         </div>
         <div class="col s12 center-align">
           <a class="parentBtn" href ng-click='pc.usePin(true)' type="button" name="button"><span>Yes</span></a>
           <a class="parentBtn" href ng-click='pc.usePin(false)' type="button" name="button"><span>No</span></a>
         </div>
         <div class="col s3">
-          <a href="#!selfCheckout"><h3>< Prev</h3></a>
+          <a href="#!selfCheckout"><h4>< Prev</h4></a>
         </div>
         <div class="col s6">
           <div class="center-align">
@@ -26,15 +24,15 @@
       </div>
       <div ng-if="pc.currentStudent.selfCheck == true" class="row">
         <div class="col s12 center-align">
-          <h3>You chose that your child is checking themselves out, this means you have opted out of selecting a
-            pin to check your student out. Press accept to continue or cancel to navigate back to the selection</h3>
+          <h3>If your child checks themself out, they will not require a PIN.</h3>
+          <h5>A PIN is a 4-digit number which is used to check out students for added security.</h5>
         </div>
         <div class="col s12 center-align">
           <a class="parentBtn" href ng-click='pc.usePin(false)' type="button" name="button"><span>Accept</span></a>
-          <a class="parentBtn" href="#!selfCheckout"  type="button" name="button"><span>Cancel</span></a>
+          <a class="parentBtn" href="#!selfCheckout"  type="button" name="button"><span>Go Back</span></a>
         </div>
         <div class="col s3">
-          <a href="#!selfCheckout"><h3>< Prev</h3></a>
+          <a href="#!selfCheckout"><h4>< Prev</h4></a>
         </div>
         <div class="col s6">
           <div class="center-align">
